--- a/package.json
+++ b/package.json
@@ -5,9 +5,20 @@
   "keywords": ["typescript", "react", "starter"],
   "main": "src/index.tsx",
   "dependencies": {
+    "@artsy/fresnel": "^1.3.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "axios": "^0.21.1",
+    "formik": "^2.2.6",
+    "redux": "^4.0.5",
+    "react-table": "^7.6.3",
+    "react-toastify": "^6.2.0",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "17.0.0",
