--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@artsy/fresnel": "^1.3.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
     "react-scripts": "4.0.0",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
